<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Dev Server -->
    <!--
    <string name="wishb_server_url">http://masunghoon.iptime.org</string>
    <string name="wishb_server_port">5001</string>
    -->
    <!-- <string name="facebook_app_id">268430496627035</string> -->


    <!-- Test Server -->
    <!-- <string name="wishb_server_url">http://54.178.201.197</string> -->
    <!-- <string name="wishb_server_port">5000</string> -->
    <!-- <string name="facebook_app_id">268430496627035</string> -->


    <!-- Real Server -->
    <string name="wishb_server_url">http://beta.wishb.net</string>
    <string name="wishb_server_port">80</string>
    <string name="facebook_app_id">268430496627035</string>
    <string name="app_name">Wish B</string>
    <string name="wishb_app_version">0.5.1</string>
    <string name="title_activity_main">Wish B</string>
    <string name="main_menu_add_bucket">추가</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_btn_login">로그인</string>
    <string name="main_btn_list">버킷리스트</string>
    <string name="lb_login_email">이메일</string>
    <string name="lb_login_password">비밀번호</string>
    <string name="lb_login_password_dup">비밀번호 확인</string>
    <string name="bucket_item_like">응원</string>
    <string name="bucket_item_reply">댓글</string>
    <string name="bucket_item_scope">기간</string>
    <string name="bucket_item_remain">잔여시간</string>
    <string name="bucket_item_live">실행중</string>
    <string name="bucket_item_done">완료</string>
    <string name="bucket_option_plan">Plan</string>
    <string name="bucket_option_repeat">Repeat</string>
    <string name="bucket_input_title">Title</string>
    <string name="main_btn_refresh">새로고침</string>
    <string name="main_menu_refresh_bucket_list">새로고침</string>
    <string name="main_menu_login">로그인</string>
    <string name="main_left_menu_setting">설정</string>
    <string name="main_left_menu_notice">공지사항</string>
    <string name="main_left_menu_update">업데이트</string>
    <string name="main_left_menu_logout">로그아웃</string>
    <string name="main_left_menu_txt_bucket">버킷</string>
    <string name="main_left_menu_txt_friends">친구</string>
    <string name="main_left_menu_txt_badge">뱃지</string>
    <string name="btn_bucket_option_sun">일</string>
    <string name="btn_bucket_option_mon">월</string>
    <string name="btn_bucket_option_tue">화</string>
    <string name="btn_bucket_option_wen">수</string>
    <string name="btn_bucket_option_thu">목</string>
    <string name="btn_bucket_option_fri">금</string>
    <string name="btn_bucket_option_sat">토</string>
    <string name="txt_bucket_option_repeat_cnt">회</string>
    <string name="btn_confirm">확인</string>
    <string name="txt_save">저장</string>
    <string name="txt_cancel">취소</string>
    <string name="btn_del">삭제</string>
    <string name="main_menu_plan">Plan</string>
    <string name="main_menu_life">라이프</string>
    <string name="plan_done_true">완료</string>
    <string name="plan_done_false">미완료</string>
    <string name="popup_plan_done_description">오늘 하루 어떠셨나요? 내일을 위해 오늘 기록을 남겨보세요.</string>
    <string name="btn_unroll">펼치기</string>
    <string name="btn_roll">감추기</string>
    <string name="txt_subbucket">하위버킷</string>
    <string name="bucket_custom_date_cancel">cancel</string>
    <string name="with_facebook">with facebook</string>
    <string name="action_register">register</string>
    <string name="empty"></string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_section1">소식</string>
    <string name="title_section2">내 버킷</string>
    <string name="title_section3">투데이</string>
    <string name="access_terms">이용약관 보기</string>
    <string name="privacy">개인정보 보호방침 보기</string>
    <string name="lbl_access_terms">이용약관 &amp; 개인정보 보호방침</string>
    <string name="lbl_agreement">이용약관</string>
    <string name="lbl_private">개인정보 보호방침</string>
    <string name="txt_btn_submit">전송</string>
    <string name="not_valid_email">올바르지 않은 이메일 형식입니다.</string>
    <string name="user_agreement_contents">이용약관 블라블라</string>
    <string name="privacy_contents">개인정보보호방침</string>
    <string name="actionbar_main_title">꿈틀</string>
    <string name="actionbar_main_notice">알림</string>
    <string name="bucket_status_achievement">달성</string>
    <string name="bucket_status_seal">봉인</string>
    <string name="bucket_status_delete">삭제</string>
    <string name="no_network_connection_toast">네트워크 연결상태를 확인해주세요</string>
    <string name="invalid_selected_date">데이터가 없는 날짜입니다. 다시 선택해주세요</string>
    <string name="complete">달성</string>
    <string name="menu_edit">수정</string>
    <string name="menu_share">공유</string>
    <string name="menu_remove">삭제</string>
    <string name="menu_save">저장</string>
    <string name="see_more">더보기</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="alert_setting">알림 설정</string>
    <string name="public_setting">공개설정</string>
    <string name="help_view">도움말 보기</string>
    <string name="inquiry">문의하기</string>
    <string name="member_leave">회원탈퇴하기</string>
    <string name="title_activity_inquiry">InquiryActivity</string>
    <string name="txt_answer_for_email">답변받을 E-Mail</string>
    <string name="txt_send_email">보내기</string>
    <string name="email_info">"contact@wishb.net"</string>
    <string name="more">더보기</string>
    <string name="notice_test">알림알림알림알림알\n수박수박수박수박수</string>

    <!-- Common -->
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="in_progress">진행중</string>
    <string name="in_login">로그인중</string>
    <string name="choose">선택</string>

    <string-array name="array_image_attach">
        <item>카메라</item>
        <item>갤러리</item>
        <item>이미지 삭제</item>
    </string-array>
    <string-array name="array_attach_image_only">
        <item>카메라</item>
        <item>갤러리</item>
    </string-array>

    <string name="confirm_check">확인</string>
    <string name="confirm_yes">예</string>
    <string name="confirm_no">아니오</string>
    <string name="txt_camera_ready_error">카메라 준비중 에러가 발생했습니다</string>
    <string name="txt_camera_not_exc">카메라 앱을 실행할 수 없습니다</string>

    <!-- Action Bar -->
    <string name="profile">프로필</string>
    <string name="today">Today</string>

    <!-- 공통 네트워크 관련 메시지 -->
    <string name="network_not_connected">네트워크 연결상태를 확인해주세요</string>
    <string name="server_timeout">앗! 잠시 후에 다시 시도해주세요</string>
    <string name="app_crash_message">앱이 비정상적으로 종료되었습니다</string>

    <!-- 앱 업데이트 관련 -->
    <string name="need_update">새로운 업데이트 버전이 있습니다</string>
    <string name="update_later">나중에 하기</string>
    <string name="update_now">지금 업데이트 하기</string>
    <string name="title_activity_notice">Notice</string>
    <string name="use_lastest_version">최신버전을 사용중입니다</string>
    <string name="title_activity_social_react_view">SocialReactViewActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="news_feed_like">응원</string>
    <string name="news_feed_reply">댓글</string>
    <string name="title_activity_freinds_bucket_list">FreindsBucketListActivity</string>
    <string name="actionbar_title_friedns_bucket_list">친구버킷리스트</string>

</resources>
