<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context=".activity.setup.MoreActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_profile"
        android:text="@string/alert_setting"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_alert_setting"
        />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/public_setting"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_public_setting"
        android:visibility="gone"
            />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/help_view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_help"
        android:visibility="gone"
            />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/inquiry"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_inquiry"
            />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/access_terms"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_access_terms"
            />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/privacy"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_privacy"
            />
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_profile"
            android:text="@string/member_leave"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_member_leave"
            />

</LinearLayout>
